Tue Sep 10 14:08:06 1996  Tom Yu  <tlyu@mit.edu>

	* mailquery.M: remove ".so man1/header.doc"

Fri Jul 7 15:43:24 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling.
	* configure.in - Add KRB5_LIBRARIES.

Tue Jun 20 14:29:23 1995  Tom Yu  (tlyu@dragons-lair)

	* poplib.c: HAS_STDLIB_H -> HAVE_STDLIB_H

Thu Jun 15 17:36:11 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Sat Jun 10 22:57:11 1995  Tom Yu  (tlyu@dragons-lair)

	* poplib.c: krb5_auth_context redefinitions

Fri Jun  9 18:27:03 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Tue May  9 10:29:44 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Check for stdlib.h

	* poplib.c: Include <string.h>. Include <stdlib.h> if present or
		define malloc().

Mon Mar 27 07:56:26 1995 Chris Provenzano (proven@mit.edu)

	* poplib.c (pop_init()): Use new calling convention for krb5_sendauth().

Thu Mar  2 12:28:20 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:55:43 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Replace check for -lsocket and -lnsl with
	        WITH_NETLIB check.

Tue Feb 28 01:52:34 1995  John Gilmore  (gnu at toad.com)

	* poplib.c:  Avoid <krb5/...> includes.

Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)

	* poplib.c (pop_init): Call krb5_sendauth() with new calling convention

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Mon Jan  2 14:41:14 1995  Richard Basch  (probe@tardis)

	* mailquery.c
	  	Issue QUIT pop command, when done retrieving messages.

Wed Nov  2 21:08:04 1994  Theodore Y. Ts'o  (tytso@dcl)
