@@ -1,3 +1,14 @@
+Fri Nov  8 17:01:28 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* poplib.c:
+	* mailquery.c: Cleaned up gcc -Wall warnings.
+
+Thu Nov  7 15:20:25 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* poplib.c (reserved;): Check the error return from
+ 		krb5_init_context(), and print an error message if
+ 		necessary.
+
 Tue Sep 10 14:08:06 1996  Tom Yu  <tlyu@mit.edu>
 
 	* mailquery.M: remove ".so man1/header.doc"
